# ws2812-esp32s3-ulp-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
example/: rust-toolchain.toml  shell.nix
example/hp-rainbow/: .gitignore  Cargo.toml  build.rs  justfile  partitions.csv
example/hp-rainbow/.cargo/: config.toml
example/hp-rainbow/src/: main.rs  ulp_debug.rs
example/ulp-rainbow/: .gitignore  Cargo.toml  build.rs  justfile
example/ulp-rainbow/.cargo/: config.toml
example/ulp-rainbow/src/: colours.rs  main.rs
src/: lib.rs
